# dragonball

./: .gitignore  CMakeLists.txt  DragonBall_PRD.md  Phase 7-10.md  README.md  main.cpp
.claude/: settings.local.json
Data/Characters/Beast_Gohan/: Beast_Gohan.act  Beast_Gohan.cmd  Beast_Gohan.cns  Beast_Gohan.def  common1.cns  sprite_database_Beast_Gohan.txt
Data/Characters/Gogeta_BASE/: 2.act  3.act  Gogeta_BASE.act  Gogeta_BASE.cns  Gogeta_BASE.def  sprite_database_Gogeta_BASE.txt
Data/Characters/Gogeta_SSB/: Gogeta_SSB.air  Gogeta_SSB.cns  Gogeta_SSB.snd
Data/Characters/Gogeta_SSJ4/: 2.act  Gogeta_SSJ4.air  Gogeta_SSJ4.cns
Data/Characters/Gohan_SSJ2/: Gohan_SSJ2.act  Gohan_SSJ2.air  Gohan_SSJ2.cmd  Gohan_SSJ2.cns  Gohan_SSJ2.def  Gohan_SSJ2.snd  common1.cns  sprite_database_Gohan_SSJ2.txt
Data/Characters/Goku_MUI/: 3.act  4.act  6.act  common1.cns
Data/Characters/Goku_SSGSS/: Goku_SSGSS.act  Goku_SSGSS.air  Goku_SSGSS.cmd  Goku_SSGSS.cns  Goku_SSGSS.def  Goku_SSGSS.snd  common1.cns  (+1 more)
include/Characters/: AnimationPlayer.h  Dummy.h  Fighter.h
include/Combat/: Collision.h
include/Core/: Game.h  InputManager.h  ResourceManager.h  StateRegistry.h
include/UI/: BitmapFont.h  HUD.h
include/Utils/: AirParser.h  CNSController.h  CmdParser.h  CnsParser.h  SFFDatabase.h
src/Characters/: AnimationPlayer.cpp  Dummy.cpp  Fighter.cpp
src/Core/: Game.cpp  InputManager.cpp  ResourceManager.cpp  StateRegistry.cpp
src/UI/: BitmapFont.cpp  HUD.cpp
src/Utils/: AirParser.cpp  CNSController.cpp  CmdParser.cpp  CnsParser.cpp  SFFDatabase.cpp
(+29 files in other folders)
